# power-bi-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  auth.py  config.py  diagnostics.py  error_catalog.py  pyproject.toml  server.py  setup.ps1
.github/workflows/: ci.yml
core/: pbip_locator.py  refresh_classifier.py  tmdl_parser.py
tools/: __init__.py  auth_tool.py  dataset.py  diagnose.py  local_model.py  query.py  refresh.py  report.py  workspace.py
