[project]
name = "power-bi-mcp"
version = "0.1.0"
description = "MCP Server for Power BI service management"
requires-python = ">=3.10"
authors = [{name = "Freelex Ho"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["power-bi", "mcp", "model-context-protocol", "ai-agent", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/FreelexHo/power-bi-mcp"
Repository = "https://github.com/FreelexHo/power-bi-mcp"
Issues = "https://github.com/FreelexHo/power-bi-mcp/issues"

[project.scripts]
power-bi-mcp = "server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]